# otus_cpp_h1

./: .travis.yml  CMakeLists.txt  README.md  lib.cpp  main.cpp  test_version_gtest.cpp
